--- a/index.html
+++ b/index.html
@@ -256,28 +256,28 @@
                     <div class="col-sm-12 col-md-6 col-lg-3">
                         <div class="service-two__card">
                             <div class="service-two__card-image">
-                                <img src="assets/images/services/crop-1.jpg" alt="">
+                                <img src="assets/images/training2.jpg" alt="">
                             </div><!-- /.service-two__card-image -->
                             <div class="service-two__card-content">
                                 <div class="service-two__card-icon">
                                     <i class="agrikon-icon-tractor"></i>
                                 </div><!-- /.service-two__card-icon -->
                                 <h3><a href="training.html">Training</a></h3>
-                                <p>Lorem ium dolor sit ametad pisicing elit sed simply do ut.</p>
+                                <p>Great Way To Learn More About Hydroponics</p>
                             </div><!-- /.service-two__card-content -->
                         </div><!-- /.service-two__card -->
                     </div><!-- /.col-sm-12 col-md-6 col-lg-3 -->
                     <div class="col-sm-12 col-md-6 col-lg-3">
                         <div class="service-two__card">
                             <div class="service-two__card-image">
-                                <img src="assets/images/services/about-4.jpeg" alt="">
+                                <img src="assets/images/r&d2.jpg" alt="">
                             </div><!-- /.service-two__card-image -->
                             <div class="service-two__card-content">
                                 <div class="service-two__card-icon">
                                     <i class="agrikon-icon-organic-food"></i>
                                 </div><!-- /.service-two__card-icon -->
                                 <h3><a href="r&d.html">R & D</a></h3>
-                                <p>Lorem ium dolor sit ametad pisicing elit sed simply do ut.</p>
+                                <p>Innovation is the process of turning ideas into manufacturable and marketable form.</p>
                             </div><!-- /.service-two__card-content -->
                         </div><!-- /.service-two__card -->
                     </div><!-- /.col-sm-12 col-md-6 col-lg-3 -->
@@ -291,14 +291,14 @@
                                     <i class="agrikon-icon-vegetable"></i>
                                 </div><!-- /.service-two__card-icon -->
                                 <h3><a href="projects.html">Project</a></h3>
-                                <p>Lorem ium dolor sit ametad pisicing elit sed simply do ut.</p>
+                                <p>A good plan can help with risk analyses but it will never guarantee the smooth running of the project.</p>
                             </div><!-- /.service-two__card-content -->
                         </div><!-- /.service-two__card -->
                     </div><!-- /.col-sm-12 col-md-6 col-lg-3 -->
                     <div class="col-sm-12 col-md-6 col-lg-3">
                         <div class="service-two__card">
                             <div class="service-two__card-image">
-                                <img src="assets/images/services/event-1.jpg" alt="">
+                                <img src="assets/images/event2.jpg" alt="">
                             </div><!-- /.service-two__card-image -->
                             <div class="service-two__card-content">
                                 <div class="service-two__card-icon">
